{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 284,
  "lineage": "5ce42aa0-25ac-939f-f1eb-d52c05c72d1f",
  "resources": [
    {
      "module": "module.america",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "america_firewall",
      "provider": "module.america.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22",
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-15T15:07:02.294-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-justjules/global/firewalls/america-to-europe-http",
            "log_config": [],
            "name": "america-to-europe-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/networks/americas-network",
            "priority": 1000,
            "project": "terraform-gcp-justjules",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/firewalls/america-to-europe-http",
            "source_ranges": [
              "0.0.0.0/0",
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "america-http-server",
              "iap-ssh-allowed"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.america.google_compute_network.americas_network"
          ]
        }
      ]
    },
    {
      "module": "module.america",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "america_vm",
      "provider": "module.america.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "america-vm1",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240515",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/zones/us-west1-a/disks/america-vm1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-justjules/zones/us-west1-a/instances/america-vm1",
            "instance_id": "2119156902971084017",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "6C4DfE6RtRg=",
            "name": "america-vm1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.83.248.142",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/networks/americas-network",
                "network_ip": "172.16.20.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/us-west1/subnetworks/americas-subnet1",
                "subnetwork_project": "terraform-gcp-justjules"
              }
            ],
            "project": "terraform-gcp-justjules",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/zones/us-west1-a/instances/america-vm1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "america-http-server",
              "iap-ssh-allowed"
            ],
            "tags_fingerprint": "asuHdAI2QV4=",
            "zone": "us-west1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.america.google_compute_network.americas_network",
            "module.america.google_compute_subnetwork.americas_subnet"
          ]
        },
        {
          "index_key": "america-vm2",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2022-dc-v20240415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/zones/us-east1-b/disks/america-vm2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-justjules/zones/us-east1-b/instances/america-vm2",
            "instance_id": "382356168093764850",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-4",
            "metadata_fingerprint": "6C4DfE6RtRg=",
            "name": "america-vm2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.196.46.132",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/networks/americas-network",
                "network_ip": "172.16.21.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/us-east1/subnetworks/americas-subnet2",
                "subnetwork_project": "terraform-gcp-justjules"
              }
            ],
            "project": "terraform-gcp-justjules",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/zones/us-east1-b/instances/america-vm2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "america-http-server"
            ],
            "tags_fingerprint": "uos4dqwoQzY=",
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.america.google_compute_network.americas_network",
            "module.america.google_compute_subnetwork.americas_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.america",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "americas_network",
      "provider": "module.america.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-gcp-justjules/global/networks/americas-network",
            "mtu": 0,
            "name": "americas-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6431309471223942943",
            "project": "terraform-gcp-justjules",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/networks/americas-network"
          }
        }
      ]
    },
    {
      "module": "module.america",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "americas_subnet",
      "provider": "module.america.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "americas-subnet1",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-15T15:07:03.512-07:00",
            "gateway_address": "172.16.20.1",
            "id": "projects/terraform-gcp-justjules/regions/us-west1/subnetworks/americas-subnet1",
            "ip_cidr_range": "172.16.20.0/24",
            "name": "americas-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/networks/americas-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-justjules",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/us-west1/subnetworks/americas-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.america.google_compute_network.americas_network"
          ]
        },
        {
          "index_key": "americas-subnet2",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-15T15:07:02.325-07:00",
            "gateway_address": "172.16.21.1",
            "id": "projects/terraform-gcp-justjules/regions/us-east1/subnetworks/americas-subnet2",
            "ip_cidr_range": "172.16.21.0/24",
            "name": "americas-subnet2",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/networks/americas-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-justjules",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/us-east1/subnetworks/americas-subnet2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.america.google_compute_network.americas_network"
          ]
        }
      ]
    },
    {
      "module": "module.asia",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "asia_allow_rdp",
      "provider": "module.asia.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-15T15:07:02.096-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-justjules/global/firewalls/asia-allow-rdp",
            "log_config": [],
            "name": "asia-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/networks/asia-network",
            "priority": 1000,
            "project": "terraform-gcp-justjules",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/firewalls/asia-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "asia-rdp-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.asia.google_compute_network.asia_network"
          ]
        }
      ]
    },
    {
      "module": "module.asia",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "asia_vm1",
      "provider": "module.asia.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2022-dc-v20240415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/zones/asia-northeast1-c/disks/asia-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-justjules/zones/asia-northeast1-c/instances/asia-vm",
            "instance_id": "2572964702244605134",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-4",
            "metadata_fingerprint": "6C4DfE6RtRg=",
            "name": "asia-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.84.250.35",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/networks/asia-network",
                "network_ip": "192.168.11.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/asia-northeast1/subnetworks/asia-subnet",
                "subnetwork_project": "terraform-gcp-justjules"
              }
            ],
            "project": "terraform-gcp-justjules",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/zones/asia-northeast1-c/instances/asia-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "asia-rdp-server"
            ],
            "tags_fingerprint": "tldh7GjAEPQ=",
            "zone": "asia-northeast1-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.asia.google_compute_network.asia_network",
            "module.asia.google_compute_subnetwork.asia_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.asia",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "asia_network",
      "provider": "module.asia.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-gcp-justjules/global/networks/asia-network",
            "mtu": 0,
            "name": "asia-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "3162567380163923743",
            "project": "terraform-gcp-justjules",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/networks/asia-network"
          }
        }
      ]
    },
    {
      "module": "module.asia",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "asia_subnet",
      "provider": "module.asia.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-15T15:07:03.386-07:00",
            "gateway_address": "192.168.11.1",
            "id": "projects/terraform-gcp-justjules/regions/asia-northeast1/subnetworks/asia-subnet",
            "ip_cidr_range": "192.168.11.0/24",
            "name": "asia-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/networks/asia-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-justjules",
            "purpose": "PRIVATE",
            "region": "asia-northeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/asia-northeast1/subnetworks/asia-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.asia.google_compute_network.asia_network"
          ]
        }
      ]
    },
    {
      "module": "module.asia.module.asia_vpn",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "vpn_ip",
      "provider": "module.asia.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.85.18.154",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-05-15T15:06:41.311-07:00",
            "id": "projects/terraform-gcp-justjules/regions/asia-northeast1/addresses/asia-vpn-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "asia-vpn-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "terraform-gcp-justjules",
            "region": "asia-northeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/asia-northeast1/addresses/asia-vpn-ip"
          }
        }
      ]
    },
    {
      "module": "module.asia.module.asia_vpn",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "esp",
      "provider": "module.asia.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-05-15T15:07:23.915-07:00",
            "id": "projects/terraform-gcp-justjules/regions/asia-northeast1/forwardingRules/asia-vpn-gateway-esp",
            "ip_address": "34.85.18.154",
            "ip_protocol": "ESP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "asia-vpn-gateway-esp",
            "network_tier": "PREMIUM",
            "project": "terraform-gcp-justjules",
            "recreate_closed_psc": false,
            "region": "asia-northeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/asia-northeast1/forwardingRules/asia-vpn-gateway-esp",
            "target": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/asia-northeast1/targetVpnGateways/asia-vpn-gateway"
          },
          "dependencies": [
            "module.asia.google_compute_network.asia_network",
            "module.asia.module.asia_vpn.google_compute_address.vpn_ip",
            "module.asia.module.asia_vpn.google_compute_vpn_gateway.vpn_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.asia.module.asia_vpn",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "udp4500",
      "provider": "module.asia.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-05-15T15:07:25.519-07:00",
            "id": "projects/terraform-gcp-justjules/regions/asia-northeast1/forwardingRules/asia-vpn-gateway-udp4500",
            "ip_address": "34.85.18.154",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "asia-vpn-gateway-udp4500",
            "network_tier": "PREMIUM",
            "port_range": "4500-4500",
            "project": "terraform-gcp-justjules",
            "recreate_closed_psc": false,
            "region": "asia-northeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/asia-northeast1/forwardingRules/asia-vpn-gateway-udp4500",
            "target": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/asia-northeast1/targetVpnGateways/asia-vpn-gateway"
          },
          "dependencies": [
            "module.asia.google_compute_network.asia_network",
            "module.asia.module.asia_vpn.google_compute_address.vpn_ip",
            "module.asia.module.asia_vpn.google_compute_vpn_gateway.vpn_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.asia.module.asia_vpn",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "udp500",
      "provider": "module.asia.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-05-15T15:07:25.220-07:00",
            "id": "projects/terraform-gcp-justjules/regions/asia-northeast1/forwardingRules/asia-vpn-gateway-udp500",
            "ip_address": "34.85.18.154",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "asia-vpn-gateway-udp500",
            "network_tier": "PREMIUM",
            "port_range": "500-500",
            "project": "terraform-gcp-justjules",
            "recreate_closed_psc": false,
            "region": "asia-northeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/asia-northeast1/forwardingRules/asia-vpn-gateway-udp500",
            "target": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/asia-northeast1/targetVpnGateways/asia-vpn-gateway"
          },
          "dependencies": [
            "module.asia.google_compute_network.asia_network",
            "module.asia.module.asia_vpn.google_compute_address.vpn_ip",
            "module.asia.module.asia_vpn.google_compute_vpn_gateway.vpn_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.asia.module.asia_vpn",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "vpn_route",
      "provider": "module.asia.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "10.150.11.0/24",
            "id": "projects/terraform-gcp-justjules/global/routes/asia-to-europe-route",
            "name": "asia-to-europe-route",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/networks/asia-network",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/asia-northeast1/vpnTunnels/asia-to-europe-tunnel",
            "priority": 1000,
            "project": "terraform-gcp-justjules",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/routes/asia-to-europe-route",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_secret_manager_secret_version.vpn_secret",
            "module.asia.google_compute_network.asia_network",
            "module.asia.module.asia_vpn.google_compute_address.vpn_ip",
            "module.asia.module.asia_vpn.google_compute_forwarding_rule.esp",
            "module.asia.module.asia_vpn.google_compute_forwarding_rule.udp4500",
            "module.asia.module.asia_vpn.google_compute_forwarding_rule.udp500",
            "module.asia.module.asia_vpn.google_compute_vpn_gateway.vpn_gateway",
            "module.asia.module.asia_vpn.google_compute_vpn_tunnel.vpn_tunnel",
            "module.europe.module.europe_vpn.google_compute_address.vpn_ip"
          ]
        }
      ]
    },
    {
      "module": "module.europe",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "europe_http",
      "provider": "module.europe.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-15T15:07:02.285-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-justjules/global/firewalls/europe-http",
            "log_config": [],
            "name": "europe-http",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/networks/europe-network",
            "priority": 1000,
            "project": "terraform-gcp-justjules",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/firewalls/europe-http",
            "source_ranges": [
              "10.150.11.0/24",
              "172.16.20.0/24",
              "172.16.21.0/24",
              "192.168.11.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "europe-http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.europe.google_compute_network.europe_network"
          ]
        }
      ]
    },
    {
      "module": "module.europe",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "module.europe.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/terraform-gcp-justjules/global/forwardingRules/http-content-rule",
            "ip_address": "34.36.166.245",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-content-rule",
            "port_range": "80-80",
            "project": "terraform-gcp-justjules",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/forwardingRules/http-content-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/targetHttpProxies/http-lb-proxy"
          },
          "dependencies": [
            "module.europe.google_compute_backend_bucket.gcs_backend",
            "module.europe.google_compute_target_http_proxy.http_proxy",
            "module.europe.google_compute_url_map.url_map",
            "module.europe.google_storage_bucket.web_bucket"
          ]
        }
      ]
    },
    {
      "module": "module.europe",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default_with_armor",
      "provider": "module.europe.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/terraform-gcp-justjules/global/forwardingRules/http-content-rule-armor",
            "ip_address": "34.49.4.39",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-content-rule-armor",
            "port_range": "80-80",
            "project": "terraform-gcp-justjules",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/forwardingRules/http-content-rule-armor",
            "target": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/targetHttpProxies/http-lb-proxy-armor"
          },
          "dependencies": [
            "module.europe.google_compute_backend_bucket.gcs_backend",
            "module.europe.google_compute_target_http_proxy.http_proxy_with_armor",
            "module.europe.google_compute_url_map.url_map",
            "module.europe.google_storage_bucket.web_bucket"
          ]
        }
      ]
    },
    {
      "module": "module.europe",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "europe_vm",
      "provider": "module.europe.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240515",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/zones/europe-west1-b/disks/europe-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-justjules/zones/europe-west1-b/instances/europe-vm",
            "instance_id": "2224724746680438000",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "startup-script": "#Thanks to Remo\n#!/bin/bash\n# Update and install Apache2\napt update\napt install -y apache2\n\n# Start and enable Apache2\nsystemctl start apache2\nsystemctl enable apache2\n\n# GCP Metadata server base URL and header\nMETADATA_URL=\"http://metadata.google.internal/computeMetadata/v1\"\nMETADATA_FLAVOR_HEADER=\"Metadata-Flavor: Google\"\n\n# Use curl to fetch instance metadata\nlocal_ipv4=$(curl -H \"${METADATA_FLAVOR_HEADER}\" -s \"${METADATA_URL}/instance/ne [...]
            },
            "metadata_fingerprint": "qalePR0jtvI=",
            "name": "europe-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.38.22.3",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/networks/europe-network",
                "network_ip": "10.150.11.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/europe-west1/subnetworks/europe-subnet",
                "subnetwork_project": "terraform-gcp-justjules"
              }
            ],
            "project": "terraform-gcp-justjules",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/zones/europe-west1-b/instances/europe-vm",
            "service_account": [
              {
                "email": "27955412352-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "europe-http-server"
            ],
            "tags_fingerprint": "HHBwzP6bCdo=",
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.europe.google_compute_network.europe_network",
            "module.europe.google_compute_subnetwork.europe_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.europe",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "europe_network",
      "provider": "module.europe.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-gcp-justjules/global/networks/europe-network",
            "mtu": 0,
            "name": "europe-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6807428484708208415",
            "project": "terraform-gcp-justjules",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/networks/europe-network"
          }
        }
      ]
    },
    {
      "module": "module.europe",
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "allow_us_only",
      "provider": "module.europe.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "fingerprint": "1jPj5Aq6VCA=",
            "id": "projects/terraform-gcp-justjules/global/securityPolicies/allow-us-only-policy",
            "name": "allow-us-only-policy",
            "project": "terraform-gcp-justjules",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Allow traffic from specific American IP ranges",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "172.16.0.0/24",
                          "172.16.1.0/24",
                          "74.110.146.239"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny",
                "description": "Default rule that denies all other traffic",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/securityPolicies/allow-us-only-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.europe",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "europe_subnet",
      "provider": "module.europe.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-15T15:07:03.055-07:00",
            "gateway_address": "10.150.11.1",
            "id": "projects/terraform-gcp-justjules/regions/europe-west1/subnetworks/europe-subnet",
            "ip_cidr_range": "10.150.11.0/24",
            "name": "europe-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/networks/europe-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-gcp-justjules",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/europe-west1/subnetworks/europe-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.europe.google_compute_network.europe_network"
          ]
        }
      ]
    },
    {
      "module": "module.europe",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "module.europe.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-15T15:07:05.798-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/terraform-gcp-justjules/global/targetHttpProxies/http-lb-proxy",
            "name": "http-lb-proxy",
            "project": "terraform-gcp-justjules",
            "proxy_bind": false,
            "proxy_id": 5036323158842969318,
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/targetHttpProxies/http-lb-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/urlMaps/web-map"
          },
          "dependencies": [
            "module.europe.google_compute_backend_bucket.gcs_backend",
            "module.europe.google_compute_url_map.url_map",
            "module.europe.google_storage_bucket.web_bucket"
          ]
        }
      ]
    },
    {
      "module": "module.europe",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy_with_armor",
      "provider": "module.europe.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-15T15:07:13.539-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/terraform-gcp-justjules/global/targetHttpProxies/http-lb-proxy-armor",
            "name": "http-lb-proxy-armor",
            "project": "terraform-gcp-justjules",
            "proxy_bind": false,
            "proxy_id": 3015691803722026238,
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/targetHttpProxies/http-lb-proxy-armor",
            "url_map": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/urlMaps/web-map"
          },
          "dependencies": [
            "module.europe.google_compute_backend_bucket.gcs_backend",
            "module.europe.google_compute_url_map.url_map",
            "module.europe.google_storage_bucket.web_bucket"
          ]
        }
      ]
    },
    {
      "module": "module.europe",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "module.europe.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-15T15:06:54.590-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/backendBuckets/europe-static-content",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "bSnSNeK2q00=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/terraform-gcp-justjules/global/urlMaps/web-map",
            "map_id": 7431540846893764369,
            "name": "web-map",
            "path_matcher": [],
            "project": "terraform-gcp-justjules",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/urlMaps/web-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.europe.google_compute_backend_bucket.gcs_backend",
            "module.europe.google_storage_bucket.web_bucket"
          ]
        }
      ]
    },
    {
      "module": "module.europe.module.europe_vpn",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "vpn_ip",
      "provider": "module.europe.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.76.178.39",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-05-15T15:06:40.954-07:00",
            "id": "projects/terraform-gcp-justjules/regions/europe-west1/addresses/europe-vpn-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "europe-vpn-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "terraform-gcp-justjules",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/europe-west1/addresses/europe-vpn-ip"
          }
        }
      ]
    },
    {
      "module": "module.europe.module.europe_vpn",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "esp",
      "provider": "module.europe.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-05-15T15:07:14.110-07:00",
            "id": "projects/terraform-gcp-justjules/regions/europe-west1/forwardingRules/europe-vpn-gateway-esp",
            "ip_address": "34.76.178.39",
            "ip_protocol": "ESP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "europe-vpn-gateway-esp",
            "network_tier": "PREMIUM",
            "project": "terraform-gcp-justjules",
            "recreate_closed_psc": false,
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/europe-west1/forwardingRules/europe-vpn-gateway-esp",
            "target": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/europe-west1/targetVpnGateways/europe-vpn-gateway"
          },
          "dependencies": [
            "module.europe.google_compute_network.europe_network",
            "module.europe.module.europe_vpn.google_compute_address.vpn_ip",
            "module.europe.module.europe_vpn.google_compute_vpn_gateway.vpn_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.europe.module.europe_vpn",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "udp4500",
      "provider": "module.europe.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-05-15T15:07:15.681-07:00",
            "id": "projects/terraform-gcp-justjules/regions/europe-west1/forwardingRules/europe-vpn-gateway-udp4500",
            "ip_address": "34.76.178.39",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "europe-vpn-gateway-udp4500",
            "network_tier": "PREMIUM",
            "port_range": "4500-4500",
            "project": "terraform-gcp-justjules",
            "recreate_closed_psc": false,
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/europe-west1/forwardingRules/europe-vpn-gateway-udp4500",
            "target": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/europe-west1/targetVpnGateways/europe-vpn-gateway"
          },
          "dependencies": [
            "module.europe.google_compute_network.europe_network",
            "module.europe.module.europe_vpn.google_compute_address.vpn_ip",
            "module.europe.module.europe_vpn.google_compute_vpn_gateway.vpn_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.europe.module.europe_vpn",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "udp500",
      "provider": "module.europe.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2024-05-15T15:07:17.082-07:00",
            "id": "projects/terraform-gcp-justjules/regions/europe-west1/forwardingRules/europe-vpn-gateway-udp500",
            "ip_address": "34.76.178.39",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "europe-vpn-gateway-udp500",
            "network_tier": "PREMIUM",
            "port_range": "500-500",
            "project": "terraform-gcp-justjules",
            "recreate_closed_psc": false,
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/europe-west1/forwardingRules/europe-vpn-gateway-udp500",
            "target": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/europe-west1/targetVpnGateways/europe-vpn-gateway"
          },
          "dependencies": [
            "module.europe.google_compute_network.europe_network",
            "module.europe.module.europe_vpn.google_compute_address.vpn_ip",
            "module.europe.module.europe_vpn.google_compute_vpn_gateway.vpn_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.europe.module.europe_vpn",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "vpn_route",
      "provider": "module.europe.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "192.168.11.0/24",
            "id": "projects/terraform-gcp-justjules/global/routes/europe-to-asia-route",
            "name": "europe-to-asia-route",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/networks/europe-network",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/regions/europe-west1/vpnTunnels/europe-to-asia-tunnel",
            "priority": 1000,
            "project": "terraform-gcp-justjules",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-justjules/global/routes/europe-to-asia-route",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_secret_manager_secret_version.vpn_secret",
            "module.asia.module.asia_vpn.google_compute_address.vpn_ip",
            "module.europe.google_compute_network.europe_network",
            "module.europe.module.europe_vpn.google_compute_address.vpn_ip",
            "module.europe.module.europe_vpn.google_compute_forwarding_rule.esp",
            "module.europe.module.europe_vpn.google_compute_forwarding_rule.udp4500",
            "module.europe.module.europe_vpn.google_compute_forwarding_rule.udp500",
            "module.europe.module.europe_vpn.google_compute_vpn_gateway.vpn_gateway",
            "module.europe.module.europe_vpn.google_compute_vpn_tunnel.vpn_tunnel"
          ]
        }
      ]
    }
  ]
}